- Fix: Context intervals intersection should be with execution aggregators

30.3.1 (08-05-2020)
- Improvement: Add type getter/setter to BibliographicReference

30.3.0 (08-05-2020)
- Improvement: AdministrativeOffice coordinator not mandatory
- Fix: Bootstrap countries with english names
- Refactor: Clean unused configuration properties
- Refactor: Remove initialization of default shift capacities

30.2.0 (05-05-2020)
- Improvement: Moved AuthenticationRedirector to academic core

30.1.0 (02-05-2020)
- New feature: Allow force sending emails to institution address
- Improvement: Allow deletion of empty degree types
- Refactor: Optimize execution course name getter when english locale selected

30.0.0 (28-04-2020)
- New feature: Shifts capacity by type, and restricted to school classes or degree curricular plans

29.2.3 (27-04-2020)
- Bug Fix: Academic office student search should display degree type on active registrations 

29.2.2 (21-04-2020)
- Bug Fix: Avoid NPE searching for curricular period on degree curricular plan
- Bug Fix: Earth unit should have party type

29.2.1 (20-04-2020)
- Bug Fix: Set party type as null by invoked the method of the base class

29.2.0 (19-04-2020)
- Improvement: Add type Person to PartyTypeEnum
- Improvement: Improve error message of comparing grades of different scales, with the printing the different scales

29.1.0 (13-04-2020)
- Improvement: Rewrite of method ExecutionCourse.getDegreePresentationString() to improve performance 
- Improvement: Support for custom names in PartyType and AccountabilityType 
- Fix: Creation of AcademicYearCE should always create a correspondent ExecutionYear

29.0.0 (04-04-2020)
- Refactor: Deprecated PrecedentDegreeInformation slots cleanup
- Refactor: Removal of organizational Units subclasses and unused methods
- Improvement: Add ExecutionInterval aggregators find methods

28.8.0 (27-03-2020)