@@ -1,3 +1,4 @@
+- Improvement: added support for enrolment prefilter curricular rule level 
 - Fix: Context intervals intersection should be with execution aggregators
 
 30.3.1 (08-05-2020)
